tests/e2e/scenarios/negative/_fixtures/dup_export_b.ks
export fun dup(): Int = 2
